{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 27,
  "lineage": "2d83ad47-d562-b6f4-796b-86ca38a06adb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf-demo-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:145405210589:instance/i-02646f0cb0969d1d3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02646f0cb0969d1d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-demo-keypair-vishal",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07f393f8dbca2727f"
              }
            ],
            "primary_network_interface_id": "eni-07f393f8dbca2727f",
            "private_dns": "ip-192-168-0-99.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.99",
            "public_ip": "3.239.241.221",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-094cc3333fb8a698e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b9e4bc7dbbd81bfa",
            "tags": {
              "name": "tf-aws-demo-ec2"
            },
            "tags_all": {
              "name": "tf-aws-demo-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0af9e859226d0319f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.tf-demo-keypair",
            "aws_security_group.tf-demo-sg",
            "aws_subnet.tf-demo-subnet",
            "aws_vpc.tf-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-demo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145405210589:internet-gateway/igw-03dd53d15c0039382",
            "id": "igw-03dd53d15c0039382",
            "owner_id": "145405210589",
            "region": "us-east-1",
            "vpc_id": "vpc-076ac9a743eb19c12"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tf-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-demo-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145405210589:route-table/rtb-0d7ddb91da917bb87",
            "id": "rtb-0d7ddb91da917bb87",
            "owner_id": "145405210589",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03dd53d15c0039382",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-076ac9a743eb19c12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "145405210589",
            "id": "rtb-0d7ddb91da917bb87",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.tf-demo-igw",
            "aws_vpc.tf-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c7141ee20375f0f",
            "region": "us-east-1",
            "route_table_id": "rtb-0d7ddb91da917bb87",
            "subnet_id": "subnet-0b9e4bc7dbbd81bfa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tf-demo-igw",
            "aws_route_table.tf-demo-rt",
            "aws_subnet.tf-demo-subnet",
            "aws_vpc.tf-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145405210589:security-group/sg-0af9e859226d0319f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af9e859226d0319f",
            "ingress": [
              {
                "cidr_blocks": [
                  "27.7.139.132/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "27.7.139.132/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-aws-demo-sg",
            "name_prefix": "",
            "owner_id": "145405210589",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "tf-aws-demo-sg"
            },
            "tags_all": {
              "name": "tf-aws-demo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076ac9a743eb19c12"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "145405210589",
            "id": "sg-0af9e859226d0319f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.tf-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-demo-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145405210589:subnet/subnet-0b9e4bc7dbbd81bfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9e4bc7dbbd81bfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "145405210589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-076ac9a743eb19c12"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "145405210589",
            "id": "subnet-0b9e4bc7dbbd81bfa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.tf-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145405210589:vpc/vpc-076ac9a743eb19c12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-07540bdb975ba0ac6",
            "default_route_table_id": "rtb-022998efb243eb590",
            "default_security_group_id": "sg-080e55f285cb86f69",
            "dhcp_options_id": "dopt-0c5777c2172f7d804",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-076ac9a743eb19c12",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-022998efb243eb590",
            "owner_id": "145405210589",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}